<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/languageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/chooseLanguage" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/spanish" />

        <RadioButton
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:text="@string/english" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp">

        <TextView
            android:id="@+id/currencyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseCurrency" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp">

        <TextView
            android:id="@+id/themeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseTheme"
            android:layout_marginRight="20dp"/>

        <Button
            android:id ="@+id/buttonTheme"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            />


    </LinearLayout>

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:drawableRight="@drawable/ic_done"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:text="@string/applyChanges"
        android:textColor="@color/white" />

</LinearLayout>